--- a/charts/jiva-w/1.0/templates/claim.yaml
+++ b/charts/jiva-w/1.0/templates/claim.yaml
@@ -18,5 +18,5 @@ spec:
     requests:
       storage: 200Mi
   volumeMode: Filesystem
-  volumeName: {{ .Values.volume.name }}
+  volumeName: {{ .Values.imageRepository.volume }}
 status: {}
