--- a/charts/jiva-w/1.0/templates/claim.yaml
+++ b/charts/jiva-w/1.0/templates/claim.yaml
@@ -10,7 +10,7 @@ metadata:
   finalizers:
   - kubernetes.io/pvc-protection
   labels:
-    io.kompose.service: "{{ .Release.Namespace | quote }}-volume"
+    io.kompose.service: {{ .Release.Namespace | quote }}-volume
 spec:
   accessModes:
   - ReadWriteOnce
