--- a/charts/jiva-w/1.0/templates/esocial-deployment.yaml
+++ b/charts/jiva-w/1.0/templates/esocial-deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
   name: {{  .Values.imageRepository.esocial.fullName   }}
-  namespace: {{ .Release.Namespace | quote }}
+  namespace: {{ .Release.Namespace   }}
   annotations:
     {{- range $key, $value := .Values.annotations }}
       {{ $key }}: {{ $value }}
@@ -39,10 +39,10 @@ spec:
         - name: APP
           value: {{  .Values.imageRepository.esocial.fullName   }}
         - name: CLIENTE
-          value: {{ .Release.Namespace | quote }}
+          value: {{ .Release.Namespace   }}
         - name: PATH_LOG
           value: /home/mgeweb/sanesocial/log/server.log
-        image: "{{  .Values.imageRepository.esocial.image }}:{{  .Values.imageRepository.esocial.imageTag }}"
+        image: {{  .Values.imageRepository.esocial.image }}:{{  .Values.imageRepository.esocial.imageTag }}
         imagePullPolicy: Always
         name: {{  .Values.imageRepository.esocial.fullName   }}
         resources: {}
@@ -52,16 +52,16 @@ spec:
           privileged: true
         volumeMounts:
         - mountPath: /home/mgeweb/sanesocial/conf
-          name: "{{ .Release.Namespace | quote }}-volume"
+          name: {{ .Release.Namespace   }}-volume
           subPath: sanesocial/conf
         - mountPath: /home/mgeweb/sanesocial/certificados
-          name: "{{ .Release.Namespace | quote }}-volume"
+          name: {{ .Release.Namespace   }}-volume
           subPath: sanesocial/certificados
         - mountPath: /home/mgeweb/sanesocial/log
-          name: "{{ .Release.Namespace | quote }}-volume"
+          name: {{ .Release.Namespace   }}-volume
           subPath: sanesocial/log
         - mountPath: /home/mgeweb/sanesocial/properties
-          name: "{{ .Release.Namespace | quote }}-volume"
+          name: {{ .Release.Namespace   }}-volume
           subPath: sanesocial/properties
       dnsPolicy: ClusterFirst
       hostNetwork: true
@@ -69,8 +69,8 @@ spec:
       securityContext: {}
       terminationGracePeriodSeconds: 0
       volumes:
-      - name: "{{ .Release.Namespace | quote }}-volume"
+      - name: {{ .Release.Namespace   }}-volume
         persistentVolumeClaim:
-          claimName: "{{ .Release.Namespace | quote }}-volume"
+          claimName: {{ .Release.Namespace   }}-volume
 status: {}
 {{- end }}
