--- a/charts/jiva-w/1.0/templates/jiva-w-deployment.yaml
+++ b/charts/jiva-w/1.0/templates/jiva-w-deployment.yaml
@@ -2,7 +2,7 @@
 kind: Deployment
 metadata:
   name: {{  .Values.imageRepository.jivaw.fullName   }}
-  namespace: {{ .Release.Namespace | quote }}
+  namespace: {{ .Release.Namespace  }}
   annotations:
     {{- range $key, $value := .Values.annotations }}
       {{ $key }}: {{ $value }}
@@ -44,7 +44,7 @@ spec:
         - name: APP
           value: {{  .Values.imageRepository.jivaw.fullName   }}
         - name: CLIENTE
-          value: {{ .Release.Namespace | quote }}
+          value: {{ .Release.Namespace  }}
         - name: IP_BD_JIVAW
           value: {{ .Values.banco.ip }}
         - name: MEMORIA_JBOSS
@@ -70,7 +70,7 @@ spec:
           value: WILDFLY
         - name: USUARIO_BD_JIVAW
           value: {{ .Values.banco.usuario }}
-        image: "{{  .Values.imageRepository.jivaw.image }}:{{  .Values.imageRepository.jivaw.imageTag }}"
+        image: {{  .Values.imageRepository.jivaw.image }}:{{  .Values.imageRepository.jivaw.imageTag }}
         imagePullPolicy: Always
         name: {{  .Values.imageRepository.jivaw.fullName   }}
         livenessProbe:
@@ -95,38 +95,38 @@ spec:
           timeoutSeconds: 60
         resources:
           limits:
-            memory: "{{ .Values.memoria.jivaw.maximo }}Mi"
+            memory: {{ .Values.memoria.jivaw.maximo }}Mi
           requests:
-            memory: "{{ .Values.memoria.jivaw.media }}Mi"
+            memory: {{ .Values.memoria.jivaw.media }}Mi
         securityContext:
           allowPrivilegeEscalation: true
           capabilities: {}
           privileged: true
         volumeMounts:
         - mountPath: /home/mgeweb/repositorio
-          name: "{{ .Release.Namespace | quote }}-volume"
+          name: {{ .Release.Namespace  }}-volume
           subPath: pacotes/repositorio/
         - mountPath: /home/mgeweb/wildfly_producao/standalone/log
-          name: "{{ .Release.Namespace | quote }}-volume"
+          name: {{ .Release.Namespace  }}-volume
           subPath: highlander/logs/
         - mountPath: /home/mgeweb/SanNFe
-          name: "{{ .Release.Namespace | quote }}-volume"
+          name: {{ .Release.Namespace  }}-volume
           subPath: highlander/SanNFe/
         - mountPath: /home/mgeweb/SankhyaW/Anexos
-          name: "{{ .Release.Namespace | quote }}-volume"
+          name: {{ .Release.Namespace  }}-volume
           subPath: highlander/Anexos/
         - mountPath: /home/mgeweb/pacotes-sannfe/
-          name: "{{ .Release.Namespace | quote }}-volume"
+          name: {{ .Release.Namespace  }}-volume
           subPath: highlander/pacotes/sannfe/
         - mountPath: /home/mgeweb/sankhyaw-dpm/pkgs
-          name: "{{ .Release.Namespace | quote }}-volume"
+          name: {{ .Release.Namespace  }}-volume
           subPath: highlander/jiva-w/
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       securityContext: {}
       terminationGracePeriodSeconds: 0
       volumes:
-      - name: "{{ .Release.Namespace | quote }}-volume"
+      - name: {{ .Release.Namespace  }}-volume
         persistentVolumeClaim:
-          claimName: "{{ .Release.Namespace | quote }}-volume"
+          claimName: {{ .Release.Namespace  }}-volume
 status: {}
