--- a/charts/jiva-w/1.0/templates/ingress.yaml
+++ b/charts/jiva-w/1.0/templates/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   rules:
   {{- if .Values.jivaw.enabled }}
-  - host: {{ .Release.Namespace }}-jivaw{{ .Values.loadBalancer.dns }}
+  - host: {{ template "jiva-w.server.fullname" .  }}-jivaw{{ .Values.loadBalancer.dns }}
     http:
       paths:
       - backend:
@@ -17,7 +17,7 @@ spec:
         path: /mge
   {{- end }}
   {{- if .Values.datasync.enabled }}
-  - host: {{ .Release.Namespace }}-datasync{{ .Values.loadBalancer.dns }}
+  - host: {{ template "jiva-w.server.fullname" .  }}-datasync{{ .Values.loadBalancer.dns }}
     http:
       paths:
       - backend:
@@ -26,7 +26,7 @@ spec:
         path: /datasync.html
   {{- end }}
   {{- if .Values.esocial.enabled }}
-  - host: {{ .Release.Namespace }}-esocial{{ .Values.loadBalancer.dns }}
+  - host: {{ template "jiva-w.server.fullname" .  }}-esocial{{ .Values.loadBalancer.dns }}
     http:
       paths:
       - backend:
