--- a/charts/jiva-w/1.0/templates/volune-claim.yaml
+++ b/charts/jiva-w/1.0/templates/volune-claim.yaml
@@ -1,8 +1,7 @@
 ﻿apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Release.Namespace | quote }}-volume
-  namespace: {{ .Release.Namespace | quote }}
+  name: volume-claim
   annotations:
     {{- range $key, $value := .Values.annotations }}
       {{ $key }}: {{ $value }}
@@ -10,7 +9,7 @@ metadata:
   finalizers:
   - kubernetes.io/pvc-protection
   labels:
-    io.kompose.service: {{ .Release.Namespace | quote }}-volume
+    io.kompose.service: volume-claim
 spec:
   accessModes:
   - ReadWriteOnce
