--- a/charts/jiva-w/1.0/templates/esocial-deployment.yaml
+++ b/charts/jiva-w/1.0/templates/esocial-deployment.yaml
@@ -38,7 +38,7 @@ spec:
         - name: APP
           value: {{  .Values.imageRepository.esocial.fullName   }}
         - name: CLIENTE
-          value: {{ .Release.Name "server"  }}
+          value: {{ Namespace }}
         - name: PATH_LOG
           value: /home/mgeweb/sanesocial/log/server.log
         image: {{  .Values.imageRepository.esocial.image }}:{{  .Values.imageRepository.esocial.imageTag }}
