--- a/charts/jiva-w/1.0/templates/jiva-w-deployment.yaml
+++ b/charts/jiva-w/1.0/templates/jiva-w-deployment.yaml
@@ -43,7 +43,7 @@ spec:
         - name: APP
           value: {{  .Values.imageRepository.jivaw.fullName   }}
         - name: CLIENTE
-          value: {{ .Release.Name "server" }}
+          value: {{ .Release.Namespace }}
         - name: IP_BD_JIVAW
           value: {{ .Values.banco.ip }}
         - name: MEMORIA_JBOSS
