--- a/charts/jiva-w/1.0/templates/sas-service.yaml
+++ b/charts/jiva-w/1.0/templates/sas-service.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    io.kompose.service: {{  .Values.imageRepository.sas.fullName   }}
-  name: {{  .Values.imageRepository.sas.fullName   }}
+    io.kompose.service: sas-service
+  name: sas-service
 spec:
   ports:
   - name: "10050"
     port: 10050
   selector:
-    io.kompose.service: {{  .Values.imageRepository.sas.fullName   }}
+    io.kompose.service: sas-service
 status:
   loadBalancer: {}
