--- a/charts/jiva-w/1.0/templates/jiva-w-deployment.yaml
+++ b/charts/jiva-w/1.0/templates/jiva-w-deployment.yaml
@@ -1,23 +1,15 @@
-﻿apiVersion: apps/v1beta1
+﻿apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
-  name: jiva-w-deployment
+  name: {{ template "jiva-w.server.fullname" . }}
   generation: 1
-  labels:
-    io.kompose.service: jiva-w-service
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
   revisionHistoryLimit: 10
-  selector:
-    matchLabels:
-      io.kompose.service: jiva-w-service
   strategy:
     type: Recreate
   template:
-    metadata:
-      labels:
-        io.kompose.service: jiva-w-service
     spec:
       containers:
       - args:
@@ -36,7 +28,7 @@ spec:
         - -c
         env:
         - name: APP
-          value: jiva-w-
+          value: jiva-w
         - name: CLIENTE
           value: {{ .Release.Namespace }}
         - name: IP_BD_JIVAW
@@ -66,7 +58,7 @@ spec:
           value: {{ .Values.banco.usuario }}
         image: {{  .Values.imageRepository.jivaw.image }}:{{  .Values.imageRepository.jivaw.imageTag }}
         imagePullPolicy: Always
-        name: jiva-w-deployment
+        name: {{ template "jiva-w.server.fullname" . }}
         livenessProbe:
           failureThreshold: 3
           initialDelaySeconds: 100
