--- a/charts/jiva-w/1.0/templates/jiva-w-service.yaml
+++ b/charts/jiva-w/1.0/templates/jiva-w-service.yaml
@@ -1,17 +1,13 @@
 ﻿apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    io.kompose.service: jiva-w-service
-  name: jiva-w-service
+  name: {{ template "jiva-w.server.fullname" . }}
 spec:
   ports:
   - name: "9990"
     port: 9990
     protocol: TCP
     targetPort: 8080
-  selector:
-    io.kompose.service: jiva-w-service
   type: ClusterIP
 status:
   loadBalancer: {}
