--- a/charts/jiva-w/1.0/templates/sas-deployment.yaml
+++ b/charts/jiva-w/1.0/templates/sas-deployment.yaml
@@ -1,30 +1,19 @@
 apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
-  name: sas-deployment
-  generation: 1
+  name: sas
   annotations:
     {{- range $key, $value := .Values.annotations }}
       {{ $key }}: {{ $value }}
     {{- end }}
-  labels:
-    io.kompose.service: sas-service
-  name: sas-deployment
 spec:
   replicas: 1
-  selector:
-    matchLabels:
-      io.kompose.service: sas-service
   strategy:
     type: Recreate
   template:
-    metadata:
-      annotations:
-      labels:
-        io.kompose.service: sas-service
     spec:
       containers:
-      - name: sas-deployment
+      - name: sas
         image: {{  .Values.imageRepository.sas.image }}:{{  .Values.imageRepository.sas.imageTag }}
         imagePullPolicy: Always
         command: ["/bin/sh", "-c"]
