--- a/charts/jiva-w/1.0/templates/sas-service.yaml
+++ b/charts/jiva-w/1.0/templates/sas-service.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    io.kompose.service: sas-service
-  name: sas-service
+    io.kompose.service: sas
+  name: sas
 spec:
   ports:
   - name: "10050"
     port: 10050
   selector:
-    io.kompose.service: sas-service
+    io.kompose.service: sas
 status:
   loadBalancer: {}
