--- a/charts/jiva-w/1.0/templates/jiva-w-service.yaml
+++ b/charts/jiva-w/1.0/templates/jiva-w-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "jiva-w.server.fullname" . }}
+  name: jiva-w
 spec:
   ports:
   - name: "9990"
