--- a/charts/jiva-w/1.0/templates/jiva-w-deployment.yaml
+++ b/charts/jiva-w/1.0/templates/jiva-w-deployment.yaml
@@ -10,6 +10,14 @@ spec:
   strategy:
     type: Recreate
   template:
+    metadata:
+      annotations:
+      {{- range $key, $value := .Values.annotations }}
+        {{ $key }}: {{ $value }}
+      {{- end }}
+      labels:
+        app: jiva-w
+        release: "{{ .Release.Name }}"
     spec:
       containers:
       - args:
