--- a/charts/jiva-w/1.0/templates/sas-deployment.yaml
+++ b/charts/jiva-w/1.0/templates/sas-deployment.yaml
@@ -16,6 +16,9 @@ spec:
       labels:
         app: jiva-w
         release: "{{ .Release.Name }}"
+      selector:
+    matchLabels:
+      io.kompose.service: sas
     spec:
       containers:
       - name: sas
