--- a/charts/jiva-w/1.0/templates/jiva-w-deployment.yaml
+++ b/charts/jiva-w/1.0/templates/jiva-w-deployment.yaml
@@ -18,6 +18,9 @@ spec:
       labels:
         app: jiva-w
         release: "{{ .Release.Name }}"
+      selector:
+    matchLabels:
+      io.kompose.service: jiva-w
     spec:
       containers:
       - args:
