--- a/charts/jiva-w/1.0/templates/jiva-w-service.yaml
+++ b/charts/jiva-w/1.0/templates/jiva-w-service.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    io.kompose.service: jiva-w
   name: jiva-w
 spec:
   ports:
@@ -8,6 +10,7 @@ spec:
     port: 9990
     protocol: TCP
     targetPort: 8080
-  type: ClusterIP
+  selector:
+    io.kompose.service: jiva-w
 status:
   loadBalancer: {}
