--- a/charts/jiva-w/1.0/templates/sas-deployment.yaml
+++ b/charts/jiva-w/1.0/templates/sas-deployment.yaml
@@ -8,6 +8,9 @@ spec:
   strategy:
     type: Recreate
   template:
+    selector:
+      matchLabels:
+        io.kompose.service: sas
     metadata:
       annotations:
       {{- range $key, $value := .Values.annotations }}
