--- a/charts/jiva-w/1.0/templates/jiva-w-deployment.yaml
+++ b/charts/jiva-w/1.0/templates/jiva-w-deployment.yaml
@@ -3,16 +3,18 @@ kind: Deployment
 metadata:
   name: jiva-w
   generation: 1
+  labels:
+    io.kompose.service: jiva-w
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
   revisionHistoryLimit: 10
+  selector:
+    matchLabels:
+      io.kompose.service: jiva-w
   strategy:
     type: Recreate
   template:
-    selector:
-      matchLabels:
-        io.kompose.service: jiva-w
     metadata:
       annotations:
       {{- range $key, $value := .Values.annotations }}
